--- a/index.html
+++ b/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name=App-Config content="fullscreen=yes,useHistoryState=yes,transition=yes">
+    <meta content=yes name=apple-mobile-web-app-capable>
+    <meta content=yes name=apple-touch-fullscreen>
+    <meta content="telephone=no,email=no" name=format-detection>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
     <title>Vite App</title>
+    <script>
+      (function(designWidth, maxWidth) {
+        var designWidth = designWidth
+        var maxWidth = maxWidth
+        var doc = document,
+          win = window;
+        var docEl = doc.documentElement;
+        var tid;
+        var rootItem,rootStyle;
+
+        function refreshRem() {
+          var width = docEl.getBoundingClientRect().width;
+          console.log(navigator)
+          if (!maxWidth) {
+            maxWidth = 750;
+          };
+          // 都按一倍图来，判断一下当前是移动设备还是pc
+          // if (maxWidth <= width && width < 1024) {
+          if (maxWidth <= width && width < 1024) {
+            width = maxWidth;
+          }else if(1024 <= width && width < 1366){
+            designWidth = 1024
+          }else if(1366 <= width && width < 1600){
+            designWidth = 1366
+          }else if(1600 <= width && width < 1920){
+            designWidth = 1600
+          }else if(1920 <= width){
+            designWidth = 1920
+          }
+          //与淘宝做法不同，直接采用简单的rem换算方法1rem=100px
+          var rem = width * 100 / designWidth;
+          //兼容UC开始
+          rootStyle="html{font-size:"+rem+'px !important}';
+          rootItem = document.getElementById('rootsize') || document.createElement("style");
+          if(!document.getElementById('rootsize')){
+          document.getElementsByTagName("head")[0].appendChild(rootItem);
+          rootItem.id='rootsize';
+          }
+          if(rootItem.styleSheet){
+          rootItem.styleSheet.disabled||(rootItem.styleSheet.cssText=rootStyle)
+          }else{
+          try{rootItem.innerHTML=rootStyle}catch(f){rootItem.innerText=rootStyle}
+          }
+          //兼容UC结束
+          docEl.style.fontSize = rem + "px";
+        };
+        refreshRem();
+
+        win.addEventListener("resize", function() {
+          clearTimeout(tid); //防止执行两次
+          tid = setTimeout(refreshRem, 300);
+        }, false);
+
+        win.addEventListener("pageshow", function(e) {
+          if (e.persisted) { // 浏览器后退的时候重新计算
+            clearTimeout(tid);
+            tid = setTimeout(refreshRem, 300);
+          }
+        }, false);
+
+        if (doc.readyState === "complete") {
+          doc.body.style.fontSize = "16px";
+        } else {
+          doc.addEventListener("DOMContentLoaded", function(e) {
+            doc.body.style.fontSize = "16px";
+          }, false);
+        }
+      })(750, 750);
+    </script>
   </head>
   <body>
     <div id="app"></div>
