--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" id="htmlRoot">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -8,85 +8,33 @@
     <meta content=yes name=apple-touch-fullscreen>
     <meta content="telephone=no,email=no" name=format-detection>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover" />
-    <title>Vite App</title>
+    <title>YouAndI</title>
     <script>
-      // (function(designWidth, maxWidth) {
-      //   var designWidth = designWidth
-      //   var maxWidth = maxWidth
-      //   var doc = document,
-      //     win = window;
-      //   var docEl = doc.documentElement;
-      //   var tid;
-      //   var rootItem,rootStyle;
-
-      //   function refreshRem() {
-      //     var width = docEl.getBoundingClientRect().width;
-      //     console.log(navigator)
-      //     if (!maxWidth) {
-      //       maxWidth = 750;
-      //     };
-      //     // 都按一倍图来，判断一下当前是移动设备还是pc
-      //     // if (maxWidth <= width && width < 1024) {
-      //     if ( width < 375) {
-      //       width = 375;
-      //     }else if(375 < width && width <= 510){
-      //       designWidth = 510
-      //     }else if(510 <= width && width < 750){
-      //       designWidth = 750
-      //     }else if(750 <= width && width < 1024){
-      //       designWidth = 1024
-      //     }else if(1024 <= width && width < 1366){
-      //       designWidth = 1366
-      //     }else if(1366 <= width && width < 1600){
-      //       designWidth = 1600
-      //     }else if(1600 <= width && width < 1920){
-      //       designWidth = 1920
-      //     }else if(1920 <= width){
-      //       designWidth = 1920
-      //     }
-      //     //与淘宝做法不同，直接采用简单的rem换算方法1rem=100px
-      //     var rem = width * 100 / designWidth;
-      //     //兼容UC开始
-      //     rootStyle="html{font-size:"+rem+'px !important}';
-      //     rootItem = document.getElementById('rootsize') || document.createElement("style");
-      //     if(!document.getElementById('rootsize')){
-      //     document.getElementsByTagName("head")[0].appendChild(rootItem);
-      //     rootItem.id='rootsize';
-      //     }
-      //     if(rootItem.styleSheet){
-      //     rootItem.styleSheet.disabled||(rootItem.styleSheet.cssText=rootStyle)
-      //     }else{
-      //     try{rootItem.innerHTML=rootStyle}catch(f){rootItem.innerText=rootStyle}
-      //     }
-      //     //兼容UC结束
-      //     docEl.style.fontSize = rem + "px";
-      //   };
-      //   refreshRem();
-
-      //   win.addEventListener("resize", function() {
-      //     clearTimeout(tid); //防止执行两次
-      //     tid = setTimeout(refreshRem, 300);
-      //   }, false);
-
-      //   win.addEventListener("pageshow", function(e) {
-      //     if (e.persisted) { // 浏览器后退的时候重新计算
-      //       clearTimeout(tid);
-      //       tid = setTimeout(refreshRem, 300);
-      //     }
-      //   }, false);
-
-      //   if (doc.readyState === "complete") {
-      //     doc.body.style.fontSize = "16px";
-      //   } else {
-      //     doc.addEventListener("DOMContentLoaded", function(e) {
-      //       doc.body.style.fontSize = "16px";
-      //     }, false);
-      //   }
-      // })(750, 750);
+     
     </script>
   </head>
   <body>
-    <div id="app"></div>
+    <script>
+      (() => {
+        var htmlRoot = document.getElementById('hemlRoot');
+        var theme = window.localStorage.getItem('theme');
+        if(hrmlRoot && theme){
+          htmlRoot,setAttribute('data-theme'.theme);
+          theme = htmlRoot = null
+        }
+      })
+    </script>
+    <div id="app">
+      <style>
+         html[data-theme='dark'] .app-loading {
+          background-color: #2c344a;
+        }
+
+        html[data-theme='dark'] .app-loading .app-loading-title {
+          color: rgb(255 255 255 / 85%);
+        }
+      </style>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
