--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700,900">
     <meta name=App-Config content="fullscreen=yes,useHistoryState=yes,transition=yes">
     <meta content=yes name=apple-mobile-web-app-capable>
     <meta content=yes name=apple-touch-fullscreen>
