--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </script>
     <link rel="icon" href="/favicon.ico" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC:100,300,400,500,700,900">
     <meta name=App-Config content="fullscreen=yes,useHistoryState=yes,transition=yes">
     <meta content=yes name=apple-mobile-web-app-capable>
